# AI-Research

./: Consciousness Is_260307_191427.txt  DOCUMENT II_260128_174712.txt  DOCUMENT I_260128_174656.txt  DOCUMENT XII_260128_201223.txt  DOCUMENT XIV_260129_135414.txt  Document III_260128_174722.txt  Document IV_260128_182637.txt  Document IX_260128_181523.txt  Document VIII_260128_181150.txt  Document VII_260128_180851.txt  Document VI_260128_180525.txt  Document V_260128_175741.txt  Document XIII_260130_220539.txt  Document XI_260128_182241.txt  Document X_260128_181837.txt  README.md  Research 10_260221_141803.txt  Research 11_260301_223452.txt  Research 12_260305_232803.txt  Research 13_260310_115501.txt  Research 14_260312_021638.txt  Research 15_260314_122521.txt  Research 16_260315_181945.txt  Research 17_260316_140258.txt  Research 17_260316_204737.txt  Research 18_260319_185748.txt  Research 19_260321_130023.txt  Research 20_260325_183613.txt  Research 21_260329_141243.txt  Research 22_260406_182822.txt  Research 23_260424_154815.txt  Research 24_260525_090756.txt  Research 25_260426_095401.txt  Research 25_260427_121053.txt  Research 25_260429_232932.txt  Research 26_260504_181258.txt  Research 27_260513_120356.txt  Research 28_260516_093803.txt  Research 2_251124_195337.txt  Research 3_251126_175507.txt  (+10 more)
being32/: Cargo.toml  MANIFESTO.md  README.md
being32/src/: action_model.rs  active_inference.rs  being32.rs  bio_regnet.rs  cmap_tests.rs  eps.rs  hex32.rs  lib.rs  relational_state.rs  self_model.rs  social.rs
